Added compass crafting recipe

--- a/CraftableCartography/changes.txt
+++ b/CraftableCartography/changes.txt
@@ -1,7 +1,2 @@
-- added models (still semi-placeholder):
-	- sextant
-	- compass
-	- temporal sextant
-	- JPS
-
-- Added lang file
+- Added crafting:
+	- Compass
