--- a/resources/assets/craftablecartography/lang/en.json
+++ b/resources/assets/craftablecartography/lang/en.json
@@ -17,5 +17,5 @@
   "item-jps": "JPS",
   "itemdesc-jps": "A genius all-in-one navigational device.",
 
-  "tabname-navigation": "Navigation"
+  "game:tabname-navigation": "Navigation"
 }
