--- a/resources/assets/craftablecartography/lang/en.json
+++ b/resources/assets/craftablecartography/lang/en.json
@@ -1,24 +1,24 @@
 {
-  "item-compass": "Compass",
-  "itemdesc-compass": "Use to see your heading. Takes a second or two for the needle to spin to position.",
+  "item-compass-*": "Compass",
+  "itemdesc-compass-*": "Use to see your heading. Takes a second or two for the needle to spin to position.",
 
-  "item-sextant": "Sextant",
-  "itemdesc-sextant": "Use to see your coordinates. Takes a few seconds to home in.",
+  "item-sextant-*": "Sextant",
+  "itemdesc-sextant-*": "Use to see your coordinates. Takes a few seconds to home in.",
 
   "item-map": "Map",
   "itemdesc-map": "Allows you to use the map.",
 
-  "item-compasstemporal": "Temporal Compass",
-  "itemdesc-compasstemporal": "Allows you to see your direction in real-time, no use required!",
+  "item-compasstemporal-*": "Temporal Compass",
+  "itemdesc-compasstemporal-*": "Allows you to see your direction in real-time, no use required!",
 
-  "item-sextanttemporal": "Temporal Sextant",
-  "itemdesc-sextanttemporal": "Allows you to see your coordinates in real-time, no use required!",
+  "item-sextanttemporal-*": "Temporal Sextant",
+  "itemdesc-sextanttemporal-*": "Allows you to see your coordinates in real-time, no use required!",
 
   "item-jps": "JPS",
   "itemdesc-jps": "A genius all-in-one navigational device.",
 
-  "item-compassframe": "Compass Frame",
-  "item-sextantparts": "Sextant Parts",
+  "item-compassframe-*": "Compass Frame",
+  "item-sextantparts-*": "Sextant Parts",
 
   "game:tabname-navigation": "Navigation"
 }
