--- a/CraftableCartography/changes.txt
+++ b/CraftableCartography/changes.txt
@@ -1,2 +1,2 @@
-- Added crafting:
-	- Compass
+- Fix: JPS & channel requirement to see other players on map should work now
+- Increased compass damping slightly
