--- a/resources/assets/craftablecartography/lang/ru.json
+++ b/resources/assets/craftablecartography/lang/ru.json
@@ -7,6 +7,9 @@
 
     "item-sextant-*": "Секстант",
     "itemdesc-sextant-*": "Используйте, чтобы увидеть ваши координаты. Потребуется несколько секунд для определения.",
+    "CoordinatesMode": "Определить координаты",
+    "PitchMode": "Определить угол возвышения",
+    "Pitch: {0:0.#}°": "Возвышение: {0:0.#}°",
 
     "item-map": "Карта",
     "itemdesc-map": "Позволяет использовать карту.",
