--- a/resources/assets/craftablecartography/lang/en.json
+++ b/resources/assets/craftablecartography/lang/en.json
@@ -7,12 +7,19 @@
 
     "item-sextant-*": "Sextant",
     "itemdesc-sextant-*": "Use to see your coordinates. Takes a few seconds to home in.",
+    "use-sextant": "Use sextant",
     "CoordinatesMode": "Determine coordinates",
     "PitchMode": "Determine elevation angle",
     "Pitch: {0:0.#}°": "Elevation: {0:0.#}°",
 
     "item-map": "Map",
     "itemdesc-map": "Allows you to use the map.",
+    "size-map": "Scale",
+    "heldhelp-drawmap": "Draw map",
+    "drawn-map": "Drawn map",
+    "empty-map": "Empty Map",
+    "clear-map": "Clear Map",
+    "save-map": "Save",
 
     "item-compasstemporal-*": "Temporal Compass",
     "itemdesc-compasstemporal-*": "Allows you to see your direction and coordinates in real-time, no use required!",
@@ -21,10 +28,19 @@
     "itemdesc-jps": "A genius all-in-one navigational device.",
     "ingameerror-jps-full": "JPS is already at maximum fuel capacity",
 
-    "Has fuel for {0} days and {1:0.#} hours": "Has fuel for {0} days and {1:0.#} hours",
+    "fuel-time": "Has fuel for {0} days and {1:0.#} hours",
+    "refuel": "Add temporal gear to refuel",
 
     "item-compassframe-*": "Compass Frame",
     "item-sextantparts-*": "Sextant Parts",
+
+    "command-setreading": "Set the coordinates of your last prospecting pick reading to add it to the map",
+    "command-setreading-success": "Added last ProPick reading to map at {x}, {y}, {z}",
+    "command-setreading-error": "No reading to add!",
+    "enter-setreading": "Enter coordinates with /setreading to save to map",
+    "command-setJPSchannel": "Sets your JPS channel (for sharing location with other players)",
+    "command-setJPSchannel-result": "JPS channel changed to '",
+    "show-player-error": "Can't add player {0} to world map, missing entity :<",
 
     "game:tabname-navigation": "Navigation"
 }
