--- a/resources/assets/craftablecartography/lang/ru.json
+++ b/resources/assets/craftablecartography/lang/ru.json
@@ -7,12 +7,19 @@
 
     "item-sextant-*": "Секстант",
     "itemdesc-sextant-*": "Используйте, чтобы увидеть ваши координаты. Потребуется несколько секунд для определения.",
+    "use-sextant": "Использовать секстант",
     "CoordinatesMode": "Определить координаты",
     "PitchMode": "Определить угол возвышения",
     "Pitch: {0:0.#}°": "Возвышение: {0:0.#}°",
 
     "item-map": "Карта",
     "itemdesc-map": "Позволяет использовать карту.",
+    "size-map": "Масштаб",
+    "heldhelp-drawmap": "Нарисовать карту",
+    "drawn-map": "Нарисованная карта",
+    "empty-map": "Пустая карта",
+    "clear-map": "Отчитстить карту",
+    "save-map": "Зарисовать",
 
     "item-compasstemporal-*": "Темпоральный компас",
     "itemdesc-compasstemporal-*": "Позволяет увидеть ваше направление и координаты в реальном времени, без необходимости использования!",
@@ -21,10 +28,19 @@
     "itemdesc-jps": "Гениальное навигационное устройство всё в одном.",
     "ingameerror-jps-full": "JPS уже работает на максимальном запасе топлива",
 
-    "Has fuel for {0} days and {1:0.#} hours": "Осталось топлива на {0} дней и {1:0.#} часов",
+    "fuel-time": "Осталось топлива на {0} дней и {1:0.#} часов",
+    "refuel": "Добавьте темпоральную шестерёнку для дозаправки",
 
     "item-compassframe-*": "Корпус компаса",
     "item-sextantparts-*": "Деталь секстанта",
+
+    "command-setreading": "Укажите координаты последнего результата георазветки, чтобы добавить его на карту",
+    "command-setreading-success": "Добавлены последние данные георазветки для карты в точках {x}, {y}, {z}",
+    "command-setreading-error": "Нечего добавлять!",
+    "enter-setreading": "Введите координаты с помощью /setreading, чтобы сохранить их на карте",
+    "command-setJPSchannel": "Устанавливает ваш канал JPS (для обмена местоположением с другими игроками)",
+    "command-setJPSchannel-result": "Канал JPS изменен на '",
+    "show-player-error": "Невозможно добавить игрока {0} на карту мира, сущность не найдена :<",
 
     "game:tabname-navigation": "Навигация"
 }
